--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "trivia",
+  "name": "TRIVIA",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "FRANCO FERNANDEZ IROUME",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4"
   },
   "devDependencies": {
